--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Quizz App</title>
+    <title>Web Dev Quiz App</title>
   </head>
   <body>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
